--- a/client/src/styles/products-linkPage/productsLinkPage.scss
+++ b/client/src/styles/products-linkPage/productsLinkPage.scss
@@ -313,60 +313,63 @@
 @media (max-width: 590px) {
     .products-link-page {
         .side-bar {
-            grid-template-rows: 50px 50px 30px !important;
+            grid-template-rows: 68px 68px 20px !important;
             .check-boxes,
             .select-box,
             .multi-range-slider {
                 h3 {
-                    font-size: .9em;
+                    font-size: 1.1em;
                     margin-bottom: 2px;
                 }
                 input[type=checkbox] {
-                    width: 14px !important;
-                    height: 14px !important;
+                    width: 16px !important;
+                    height: 16px !important;
                     &:checked:before {
-                        font-size: 11px !important;
-                        top: -16% !important;
+                        font-size: 13px !important;
+                        top: -20% !important;
                     }
                 }
                 .items {
                     p label{
-                        font-size: .7em !important;
+                        font-size: .9em !important;
                     }
                 }
                 select {
-                    font-size: 12px !important;
+                    font-size: 13px !important;
                     padding: 1px 5px !important;
                 }
             }
             .multi-range-slider {
                 margin-top: 5px !important;
-                font-size: .8em;
+                font-size: .9em;
                 .items {
                     width: 60% !important;
                 }
             }
             .brand-of h1 {
                 font-size: 1.2em;
-                margin: 3.3em !important;
+                margin: 3.5em !important;
             }
         }
         .products-list-item {
-            width: 160px;
-            font-size: .5em;
+            width: 70vw;
+            font-size: .7em;
             h5 {
-                font-size: .9em !important;
-                padding: 1px 2px !important;
+                font-size: 1em !important;
             }
             img {
-                height: 90px !important;
+                height: 125px !important;
             }
             .text {
                 height: 90px !important;
                 span {
-                    font-size: 8px !important;
+                    font-size: 12px !important;
                     padding: 2px 0 !important;
                 }
+            }
+            .price {
+                margin: 5px 5vw;
+                font-size: 1.4em;
             }
         }
     }
