--- a/src/styles/home/home.css
+++ b/src/styles/home/home.css
@@ -356,6 +356,7 @@ body {
   text-align: center;
   font-weight: 200;
   margin: 20px 0 25px 0;
+  position: relative;
 }
 
 .home main .main-products .whats-new-section h2:before, .home main .main-products .whats-new-section h2:after,
@@ -366,7 +367,7 @@ body {
   height: 1px;
   background-color: #666;
   position: absolute;
-  margin-top: 4vh;
+  top: 50%;
 }
 
 .home main .main-products .whats-new-section h2:before,
@@ -511,6 +512,7 @@ body {
   text-align: center;
   font-weight: 200;
   margin: 20px 0 25px 0;
+  position: relative;
 }
 
 .home main .main-products .main-slide-section h2:before, .home main .main-products .main-slide-section h2:after {
@@ -519,7 +521,7 @@ body {
   height: 1px;
   background-color: #666;
   position: absolute;
-  margin-top: 4vh;
+  top: 50%;
 }
 
 .home main .main-products .main-slide-section h2:before {
@@ -705,6 +707,23 @@ body {
     border-radius: 0 5em 0 3em;
     margin-top: 2vh;
   }
+  .home main .main-products .whats-new-section h2:before, .home main .main-products .whats-new-section h2:after,
+  .home main .main-products .whats-popular-section h2:before,
+  .home main .main-products .whats-popular-section h2:after,
+  .home main .main-products .main-slide-section h2:before,
+  .home main .main-products .main-slide-section h2:after {
+    width: 10% !important;
+  }
+  .home main .main-products .whats-new-section h2:before,
+  .home main .main-products .whats-popular-section h2:before,
+  .home main .main-products .main-slide-section h2:before {
+    left: 5% !important;
+  }
+  .home main .main-products .whats-new-section h2:after,
+  .home main .main-products .whats-popular-section h2:after,
+  .home main .main-products .main-slide-section h2:after {
+    right: 5% !important;
+  }
   .home main .main-products .slider-section .slide .slide-item img {
     height: 50vh !important;
   }
@@ -789,6 +808,7 @@ body {
   .home main .main-products .whats-popular-section .new-products .products-slide .product-item .detail h5,
   .home main .main-products .whats-popular-section .popular-products .products-slide .product-item .detail h5 {
     font-size: 2vw;
+    padding: 1.5px 3px;
   }
   .home main .main-products .whats-new-section .new-products .products-slide .product-item .detail img,
   .home main .main-products .whats-new-section .popular-products .products-slide .product-item .detail img,
@@ -825,10 +845,17 @@ body {
   main .main-products .slider-section .pre {
     font-size: 10vw !important;
   }
+  main .main-products .whats-new-section h2,
+  main .main-products .whats-popular-section h2,
+  main .main-products .main-slide-section h2 {
+    font-size: 5vw;
+  }
   main .main-products .whats-new-section .new-products button,
   main .main-products .whats-new-section .popular-products button,
   main .main-products .whats-popular-section .new-products button,
-  main .main-products .whats-popular-section .popular-products button {
+  main .main-products .whats-popular-section .popular-products button,
+  main .main-products .main-slide-section .new-products button,
+  main .main-products .main-slide-section .popular-products button {
     font-size: 10vw !important;
   }
 }
